@@ -3,6 +3,7 @@ STELLA, CHANGES
 #### 0.7.7 (2009-11-??) ###############################
 
 * FIXED: JSON parse error when nil body 
+* FIXED: URI query parameter encoding
 * CHANGE: Removed Stella::Testplan::Stats
 * ADDED: Stella::Testplan#to_json
 * ADDED: Stella::Data::Helpers#read_file
